[project]
name = "lp-distance-aware-encoding-for-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# PyTorch currently supports Python 3.10-3.14 on Windows/Linux,
# so avoid allowing Python 3.15+ until PyTorch officially supports it.
requires-python = ">=3.13,<3.15"

dependencies = [
    "colorama>=0.4.6",
    "lightning>=2.6.5",
    "networkx>=3.6.1",
    "numpy>=2.5.0",
    "optuna>=4.9.0",

    "torch>=2.12.1",
    "torch-geometric>=2.8.0",
    "torcheval>=0.0.7",
    "torchmetrics>=1.9.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true